<resources>
    <string name="app_name">Qwisly</string>
    <string name="ListItem_title">The quest for ListItems!</string>
    <string name="ListItem">This is a ListItem.</string>
    <string name="ListItem2">This is another ListItem.</string>
    <string name="ListItem3">This is a third ListItem.</string>
    <string name="ListItem4">This is the last ListItem.</string>
    <string name="answer_no">False</string>
    <string name="answer_yes">True</string>
    <string name="navigation_next">Next</string>
    <string name="navigation_previous">Back</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
